// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`History render full data 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th History-SectionTitle"
      >
        i18n:Ресурсы фолдера
      </th>
      <th
        class="AbcTable-Th QuotaTypeMarker QuotaTypeMarker_type_quota"
        colspan="4"
      >
        i18n:Всего
        <button
          aria-describedby="tooltip-0-1"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
      <th
        class="AbcTable-Th"
        colspan="4"
      >
        i18n:Баланс
        <button
          aria-describedby="tooltip-0-2"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td"
        rowspan="2"
      >
        YDB-RAM-SAS
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffOldValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffOldValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffOldValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="2"
      >
        −1,000.042 GiB
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffOldValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffOldValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffOldValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="2"
      >
        +500.001 GiB
      </td>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffNewValue"
      >
        −0
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffNewValue"
      >
        .042
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffNewValue"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffNewValue"
      >
        1,500
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffNewValue"
      >
        .001
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffNewValue"
      >
        GiB
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`History render no data 1`] = `null`;

exports[`History render only balance 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th History-SectionTitle"
      >
        i18n:Ресурсы фолдера
      </th>
      <th
        class="AbcTable-Th"
        colspan="4"
      >
        i18n:Баланс
        <button
          aria-describedby="tooltip-0-10"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td"
        rowspan="2"
      >
        YDB-RAM-SAS
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffOldValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffOldValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffOldValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="2"
      >
        +500.001 GiB
      </td>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffNewValue"
      >
        1,500
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffNewValue"
      >
        .001
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffNewValue"
      >
        GiB
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`History render only balance, same 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th History-SectionTitle"
      >
        i18n:Ресурсы фолдера
      </th>
      <th
        class="AbcTable-Th"
        colspan="4"
      >
        i18n:Баланс
        <button
          aria-describedby="tooltip-0-12"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td"
        rowspan="1"
      >
        YDB-RAM-SAS
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffSameValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffSameValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffSameValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="1"
      />
    </tr>
  </tbody>
</table>
`;

exports[`History render only quota 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th History-SectionTitle"
      >
        i18n:Ресурсы фолдера
      </th>
      <th
        class="AbcTable-Th QuotaTypeMarker QuotaTypeMarker_type_quota"
        colspan="4"
      >
        i18n:Всего
        <button
          aria-describedby="tooltip-0-9"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td"
        rowspan="2"
      >
        YDB-RAM-SAS
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffOldValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffOldValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffOldValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="2"
      >
        −1,000.042 GiB
      </td>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffNewValue"
      >
        −0
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffNewValue"
      >
        .042
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffNewValue"
      >
        GiB
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`History render only quota, same 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th History-SectionTitle"
      >
        i18n:Ресурсы фолдера
      </th>
      <th
        class="AbcTable-Th QuotaTypeMarker QuotaTypeMarker_type_quota"
        colspan="4"
      >
        i18n:Всего
        <button
          aria-describedby="tooltip-0-11"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td"
        rowspan="1"
      >
        YDB-RAM-SAS
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffSameValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffSameValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffSameValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="1"
      />
    </tr>
  </tbody>
</table>
`;

exports[`History render same balance 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th History-SectionTitle"
      >
        i18n:Ресурсы фолдера
      </th>
      <th
        class="AbcTable-Th QuotaTypeMarker QuotaTypeMarker_type_quota"
        colspan="4"
      >
        i18n:Всего
        <button
          aria-describedby="tooltip-0-5"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
      <th
        class="AbcTable-Th"
        colspan="4"
      >
        i18n:Баланс
        <button
          aria-describedby="tooltip-0-6"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td"
        rowspan="2"
      >
        YDB-RAM-SAS
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffOldValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffOldValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffOldValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="2"
      >
        −1,000.042 GiB
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffSameValue"
        rowspan="2"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffSameValue"
        rowspan="2"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffSameValue"
        rowspan="2"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="2"
      />
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffNewValue"
      >
        −0
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffNewValue"
      >
        .042
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffNewValue"
      >
        GiB
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`History render same quota 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th History-SectionTitle"
      >
        i18n:Ресурсы фолдера
      </th>
      <th
        class="AbcTable-Th QuotaTypeMarker QuotaTypeMarker_type_quota"
        colspan="4"
      >
        i18n:Всего
        <button
          aria-describedby="tooltip-0-3"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
      <th
        class="AbcTable-Th"
        colspan="4"
      >
        i18n:Баланс
        <button
          aria-describedby="tooltip-0-4"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td"
        rowspan="2"
      >
        YDB-RAM-SAS
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffSameValue"
        rowspan="2"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffSameValue"
        rowspan="2"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffSameValue"
        rowspan="2"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="2"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffOldValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffOldValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffOldValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="2"
      >
        +500.001 GiB
      </td>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffNewValue"
      >
        1,500
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffNewValue"
      >
        .001
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffNewValue"
      >
        GiB
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`History render same quota and balance 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th History-SectionTitle"
      >
        i18n:Ресурсы фолдера
      </th>
      <th
        class="AbcTable-Th QuotaTypeMarker QuotaTypeMarker_type_quota"
        colspan="4"
      >
        i18n:Всего
        <button
          aria-describedby="tooltip-0-7"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
      <th
        class="AbcTable-Th"
        colspan="4"
      >
        i18n:Баланс
        <button
          aria-describedby="tooltip-0-8"
          autocomplete="off"
          class="Button2 Button2_size_s Button2_view_clear Hint"
          type="button"
        >
          <span
            class="Button2-Icon"
          >
            <span
              class="icon icon_glyph_info-circle icon_has-glyph_yes"
              data-lego="react"
            >
              <span
                class="ta-component awesome-icon awesome-icon_icon_info-circle"
                data-lego="react"
              />
            </span>
          </span>
        </button>
      </th>
    </tr>
    <tr
      class="AbcTable-Tr History-Line History-Line_odd"
    >
      <td
        class="AbcTable-Td"
        rowspan="1"
      >
        YDB-RAM-SAS
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffSameValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffSameValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffSameValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int History-DiffSameValue"
        rowspan="1"
      >
        1,000
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac History-DiffSameValue"
        rowspan="1"
      />
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit History-DiffSameValue"
        rowspan="1"
      >
        GiB
      </td>
      <td
        class="AbcTable-Td History-DiffDelta"
        rowspan="1"
      />
    </tr>
  </tbody>
</table>
`;
